[package]
name = "rand_d_regular"
version = "0.1.0"
edition = "2021"

[lib]
name = "rand_d_regular"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
numpy = "0.21"
rand = "0.8"
hashbrown = "0.14"
rayon = "1.10"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"